--- a/examples/react-ssr-ts/src/views/index.html
+++ b/examples/react-ssr-ts/src/views/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple React SSR Vite Express</title>
+    <script type="module" crossorigin src="/static/assets/index-FqhOBsn9.js"></script>
   </head>
   <body>
     <div id="app"><!--outlet--></div>
-    <script type="module" src="./client.tsx"></script>
   </body>
 </html>
